# clipboard-transformer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  EXE_USAGE.md  LICENSE  README.md  clipboard-transformer.spec  clipboard_util.py  config.json  config.py  constants.py  hook.py  main.py  pyproject.toml  requirements.txt  transformer.py
.github/workflows/: build.yml  lint.yml  security.yml  test.yml
tests/: conftest.py  debug_notification.py  run_all_tests.py  test_basic.py  test_clipboard_util.py  test_config.py  test_constants.py  test_edge_cases.py  test_final.py  test_fixes.py  test_hook.py  test_integration.py  test_main.py  test_notification.py  test_stress.py  test_winotify.py
