[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clipboard-transformer"
version = "1.0.0"
description = "Windows clipboard text transformer with customizable rules"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Clipboard Transformer Contributors"}
]
keywords = ["clipboard", "windows", "text-transformer", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "keyboard>=0.13.5",
    "pywin32>=306",
    "pystray>=0.19.5",
    "Pillow>=12.2.0",
    "winotify>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "pyinstaller>=5.0.0",
    "ruff>=0.15.4",
    "bandit>=1.7.5",
    "pip-audit>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/MSHT0511/clipboard-transformer"
Issues = "https://github.com/MSHT0511/clipboard-transformer/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v"
]

[tool.coverage.run]
omit = [
    "tests/*",
    "venv/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "venv",
    "build",
    "dist",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = [".git", ".pytest_cache", "__pycache__", "tests", "venv", "build", "dist", "htmlcov"]
skips = ["B101"]  # Skip assert_used check for tests
